--- a/app/src/main/res/layout/item_shift_schedule_edit_composition.xml
+++ b/app/src/main/res/layout/item_shift_schedule_edit_composition.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="480dp"
     android:background="@drawable/shift_schedule_edit_composition_background">
 
     <TextView
@@ -37,13 +37,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/shift_schedule_compound_shift_edit_background"
         android:fontFamily="@font/ru_hero"
         android:padding="8dp"
         android:text="А"
         android:textColor="@color/name_devices_appbar"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/shitB"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/autoComplete" />
 
@@ -69,11 +70,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:visibility="gone"
         android:fontFamily="@font/ru_hero"
         android:hint="Введите текст"
         android:textColor="@color/name_devices_appbar"
         android:textColorHint="@color/text_recycle_smile"
+        android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@+id/ivSave"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvJobTitle" />
@@ -82,8 +83,8 @@
         android:id="@+id/ivSave"
         android:layout_width="44dp"
         android:layout_height="44dp"
-        android:visibility="gone"
         android:layout_marginEnd="16dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/autoComplete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/autoComplete"
@@ -95,12 +96,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:padding="8dp"
-        android:fontFamily="@font/ru_hero"
         android:background="@drawable/shift_schedule_compound_shift_edit_background"
+        android:fontFamily="@font/ru_hero"
+        android:padding="8dp"
         android:text="Б"
         android:textColor="@color/name_devices_appbar"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/shitC"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shitA" />
 
@@ -112,8 +114,8 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/ru_hero"
         android:hint="Введите ФИО"
-        android:textColorHint="@color/floatingActionButton"
         android:textColor="@color/name_devices_appbar"
+        android:textColorHint="@color/floatingActionButton"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/shitB"
         app:layout_constraintEnd_toStartOf="@+id/ivNamePersonalShiftEditB"
@@ -136,12 +138,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:padding="8dp"
-        android:fontFamily="@font/ru_hero"
         android:background="@drawable/shift_schedule_compound_shift_edit_background"
+        android:fontFamily="@font/ru_hero"
+        android:padding="8dp"
         android:text="В"
         android:textColor="@color/name_devices_appbar"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/shitD"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shitB" />
 
@@ -153,8 +156,8 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/ru_hero"
         android:hint="Введите ФИО"
-        android:textColorHint="@color/floatingActionButton"
         android:textColor="@color/name_devices_appbar"
+        android:textColorHint="@color/floatingActionButton"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/shitC"
         app:layout_constraintEnd_toStartOf="@+id/ivNamePersonalShiftEditC"
@@ -177,12 +180,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:padding="8dp"
-        android:fontFamily="@font/ru_hero"
         android:background="@drawable/shift_schedule_compound_shift_edit_background"
+        android:fontFamily="@font/ru_hero"
+        android:padding="8dp"
         android:text="Г"
         android:textColor="@color/name_devices_appbar"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/shitE"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shitC" />
 
@@ -194,8 +198,8 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/ru_hero"
         android:hint="Введите ФИО"
-        android:textColorHint="@color/floatingActionButton"
         android:textColor="@color/name_devices_appbar"
+        android:textColorHint="@color/floatingActionButton"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/shitD"
         app:layout_constraintEnd_toStartOf="@+id/ivNamePersonalShiftEditD"
@@ -237,8 +241,8 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/ru_hero"
         android:hint="Введите ФИО"
-        android:textColorHint="@color/floatingActionButton"
         android:textColor="@color/name_devices_appbar"
+        android:textColorHint="@color/floatingActionButton"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/shitE"
         app:layout_constraintEnd_toStartOf="@+id/ivNamePersonalShiftEditE"
