--- a/app/src/main/res/layout/fragment_shift_schedule_edit_composition.xml
+++ b/app/src/main/res/layout/fragment_shift_schedule_edit_composition.xml
@@ -6,6 +6,33 @@
     android:layout_height="match_parent"
     android:background="@drawable/background_callendar_day_actual">
 
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="480dp"
+                android:background="@drawable/shift_schedule_edit_composition_background" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="480dp"
+                android:background="@drawable/shift_schedule_edit_composition_background" />
+
+
+        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
