--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -53,11 +53,16 @@
         <item name="android:textSize">20sp</item>
     </style>
 
-    <style name="CustomChipStyle" parent="Widget.MaterialComponents.Chip.Filter">
+    <style name="ShiftScheduleChipStyle" parent="Widget.MaterialComponents.Chip.Filter">
         <!-- Цвет фона Chip в состоянии checked -->
         <item name="chipBackgroundColor">@color/chip_shif_schedule</item>
         <!-- Цвет флажка -->
         <item name="checkedIconTint">@color/calendar_background</item>
+    </style>
+
+    <style name="ElectricMotorChipStyle" parent="Widget.MaterialComponents.Chip.Filter">
+        <!-- Цвет флажка -->
+        <item name="checkedIconTint">@color/floatingActionButton</item>
     </style>
 
 
