--- a/app/src/main/res/layout/item_full_calendar_month.xml
+++ b/app/src/main/res/layout/item_full_calendar_month.xml
@@ -16,8 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top|center"
-            android:layout_marginTop="2dp"
-            android:layout_marginBottom="2dp"
+            android:layout_margin="4dp"
             android:gravity="center"
             android:textStyle="bold"
             android:paddingTop="2dp"
@@ -63,6 +62,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="1dp"
             android:alpha="0.5"
             android:gravity="center"
             android:text="B"
